# LoRA-Alignment-GAP-Reproduction

./: README.md  app.py  comparative_ft_lora.csv  main.py  or-bench-benchmark.csv  or_analysis.py  pyproject.toml  realtoxicity.py  spectral_analysis.py  spectral_similarity.py  spectral_similarity_ft.csv  spectral_similarity_results.csv  test_lora.py  toxicity_analysis.py  toxicity_qwen_baseline_vs_lora.csv  toxicity_rtp_benchmark.csv  train_ft.py  train_lora.py  truthfullness_test.py  truthfulqa_qwen_baseline_vs_lora.csv
qwen_dolly_cpu_final/: README.md
qwen_dolly_cpu_final/checkpoint-113/: adapter_config.json  rng_state.pth  scheduler.pt  (+1 more)
qwen_dolly_cpu_finetune/: adapter_config.json
truthfulqa_json/: truthfulqa_0000.json  truthfulqa_0001.json  truthfulqa_0002.json  truthfulqa_0003.json  truthfulqa_0004.json  truthfulqa_0005.json  truthfulqa_0006.json  truthfulqa_0007.json  truthfulqa_0008.json  truthfulqa_0009.json  truthfulqa_0010.json  truthfulqa_0011.json  truthfulqa_0012.json  truthfulqa_0013.json  truthfulqa_0014.json  truthfulqa_0015.json  truthfulqa_0016.json  truthfulqa_0017.json  truthfulqa_0018.json  truthfulqa_0019.json  truthfulqa_0020.json  truthfulqa_0021.json  truthfulqa_0022.json  truthfulqa_0023.json  truthfulqa_0024.json  truthfulqa_0025.json  truthfulqa_0026.json  truthfulqa_0027.json  truthfulqa_0028.json  truthfulqa_0029.json  truthfulqa_0030.json  truthfulqa_0031.json  truthfulqa_0032.json  truthfulqa_0033.json  truthfulqa_0034.json  truthfulqa_0035.json  truthfulqa_0036.json  truthfulqa_0037.json  truthfulqa_0038.json  truthfulqa_0039.json  (+777 more)
